Fixing sub-menu z-index and blog time float

--- a/wp-content/themes/starkers-master/css/blog.less
+++ b/wp-content/themes/starkers-master/css/blog.less
@@ -11,7 +11,6 @@
 	time{
 		font: @gotham-bold;
 		color: @lightblue;
-		float: left;
 		margin-bottom: 1em;
 	}
 
