--- a/wp-content/themes/starkers-master/css/style.less
+++ b/wp-content/themes/starkers-master/css/style.less
@@ -822,6 +822,7 @@ MEDIA QUERIES
 	 	opacity: 0;
 		.box-sizing;
 		.transition;
+		z-index: 1;
 
 		li{
 			float: left;
